agrego resolucion teorica

--- a/ej-clase1/xor-nnet.ipynb
+++ b/ej-clase1/xor-nnet.ipynb
@@ -10,6 +10,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Resolucion Teorica"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./IMG_5028.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"IMG_5029.jpg\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
