:wrench: Agrego derivadas analiticas y por limite

--- a/examen/rivela-examen-ap-coh5.ipynb
+++ b/examen/rivela-examen-ap-coh5.ipynb
@@ -3370,6 +3370,107 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Función\n",
+    "\n",
+    "$y = a \\log({b}) + b c^2$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Derivadas Analiticas\n",
+    "\n",
+    "$\\frac{\\partial y}{\\partial a} = log(b)$\n",
+    "\n",
+    "$\\frac{\\partial y}{\\partial b} = \\frac{a}{b} + c^2$\n",
+    "\n",
+    "$\\frac{\\partial y}{\\partial c} = 2bc$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Derivadas usando Límite\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Derivadas usando grafo de cómputo y regla de la cadena\n",
+    "\n",
+    "Derivada respecto de a\n",
+    "\n",
+    "$\\frac{\\partial y}{\\partial a} = \\lim\\limits_{h \\to 0}{\\frac{(a+h)\\log(b)+bc^2 -a\\log(b) - bc^2}{h}}$ \n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{(a+h)\\log(b)+\\sout{bc^2} -a\\log(b) - \\sout{bc^2}}{h}}$\n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{(a+h)\\log(b) -a\\log(b)}{h}}$\n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{(\\sout{a}+h\\sout{-a})\\log(b)}{h}}$\n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{(h)\\log(b)}{h}}$\n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0} { \\log(b)}$\n",
+    "\n",
+    "$= \\log(b)$\n",
+    "\n",
+    "Derivada respecto de b\n",
+    "\n",
+    "$\\frac{\\partial y}{\\partial b} = \\lim\\limits_{h \\to 0}{\\frac{(a)\\log(b+h)+(b+h)c^2 -a\\log(b) - bc^2}{h}} = \\lim\\limits_{h \\to 0}{\\frac{(a)\\log(b+h)-a\\log(b) + (b+h)c^2 - bc^2}{h}} $ \n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{(a)\\log(b+h)-a\\log(b) + (\\sout{b}+ h \\sout{-b})c^2}{h}}$\n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{(a)\\log(b+h)-a\\log(b) + (h)c^2}{h}}$\n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{(a)\\log(b+h)-a\\log(b)}{h} + c^2}$\n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{a}{h} \\log(\\frac{b+h}{b}) + c^2}$\n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{a}{h} \\log(1+\\frac{h}{b}) + c^2}$\n",
+    "\n",
+    "Planteo $h=vb$ entonces $v=\\frac{h}{b}$. Se puede afirmar que cuando h tiende a 0 tambien lo hace v\n",
+    "\n",
+    "$= \\lim\\limits_{v \\to 0}{\\frac{a}{vb} \\log(1+v) + c^2}$\n",
+    "\n",
+    "$= \\lim\\limits_{v \\to 0}{\\frac{a}{vb} \\log(1+v) + c^2}$\n",
+    "\n",
+    "$= \\lim\\limits_{v \\to 0}{\\frac{a}{b}\\frac{\\log(1+v)}{v} + c^2}$\n",
+    "\n",
+    "Tenemos una indeterminacion del tipo $\\frac{0}{0}$ por lo que tenemos que aplicar la regla de L'Hopital. Nos resulta:\n",
+    "\n",
+    "$= \\lim\\limits_{v \\to 0}{\\frac{a}{b}\\frac{\\frac{1}{1+v}}{1} + c^2}$\n",
+    "\n",
+    "$= \\frac{a}{b} + c^2$\n",
+    "\n",
+    "Derivada respecto de c\n",
+    "\n",
+    "$\\frac{\\partial y}{\\partial c} = \\lim\\limits_{h \\to 0}{\\frac{a\\log(b)+b(c+h)^2 -a\\log(b) - bc^2}{h}}$ \n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{\\sout{a\\log(b)}+b(c+h)^2 \\sout{-a\\log(b)} - bc^2}{h}}$\n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{b(c+h)^2 - bc^2}{h}}$\n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{b(c^2 +2ch + h^2) - bc^2}{h}}$\n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{b(c^2 +2ch + h^2 - c^2)}{h}}$\n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{b(\\sout{c^2} +2ch + h^2 - \\sout{c^2})}{h}}$\n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{2bch}{h} \\frac{bh^2}{h}}$\n",
+    "\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{2bc\\sout{h}}{\\sout{h}} \\frac{\\sout{bh^2}}{\\sout{h}}}$\n",
+    "\n",
+    "$= 2bc$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
