:wrench: pruebo con cancel

--- a/examen/rivela-examen-ap-coh5.ipynb
+++ b/examen/rivela-examen-ap-coh5.ipynb
@@ -3407,7 +3407,7 @@
     "\n",
     "$\\frac{\\partial y}{\\partial a} = \\lim\\limits_{h \\to 0}{\\frac{(a+h)\\log(b)+bc^2 -a\\log(b) - bc^2}{h}}$ \n",
     "\n",
-    "$= \\lim\\limits_{h \\to 0}{\\frac{(a+h)\\log(b)+\\sout{bc^2} -a\\log(b) - \\sout{bc^2}}{h}}$\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{(a+h)\\log(b)+\\cancel{bc^2} -a\\log(b) - \\cancel{bc^2}}{h}}$\n",
     "\n",
     "$= \\lim\\limits_{h \\to 0}{\\frac{(a+h)\\log(b) -a\\log(b)}{h}}$\n",
     "\n",
