:wrench: corrijo error de latex

--- a/examen/rivela-examen-ap-coh5.ipynb
+++ b/examen/rivela-examen-ap-coh5.ipynb
@@ -3411,7 +3411,7 @@
     "\n",
     "$= \\lim\\limits_{h \\to 0}{\\frac{(a+h)\\log(b) -a\\log(b)}{h}}$\n",
     "\n",
-    "$= \\lim\\limits_{h \\to 0}{\\frac{(\\sout{a}+h\\sout{-a})\\log(b)}{h}}$\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{(\\cancel{a}+h\\cancel{-a})\\log(b)}{h}}$\n",
     "\n",
     "$= \\lim\\limits_{h \\to 0}{\\frac{(h)\\log(b)}{h}}$\n",
     "\n",
@@ -3423,7 +3423,7 @@
     "\n",
     "$\\frac{\\partial y}{\\partial b} = \\lim\\limits_{h \\to 0}{\\frac{(a)\\log(b+h)+(b+h)c^2 -a\\log(b) - bc^2}{h}} = \\lim\\limits_{h \\to 0}{\\frac{(a)\\log(b+h)-a\\log(b) + (b+h)c^2 - bc^2}{h}} $ \n",
     "\n",
-    "$= \\lim\\limits_{h \\to 0}{\\frac{(a)\\log(b+h)-a\\log(b) + (\\sout{b}+ h \\sout{-b})c^2}{h}}$\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{(a)\\log(b+h)-a\\log(b) + (\\cancel{b}+ h \\cancel{-b})c^2}{h}}$\n",
     "\n",
     "$= \\lim\\limits_{h \\to 0}{\\frac{(a)\\log(b+h)-a\\log(b) + (h)c^2}{h}}$\n",
     "\n",
@@ -3451,7 +3451,7 @@
     "\n",
     "$\\frac{\\partial y}{\\partial c} = \\lim\\limits_{h \\to 0}{\\frac{a\\log(b)+b(c+h)^2 -a\\log(b) - bc^2}{h}}$ \n",
     "\n",
-    "$= \\lim\\limits_{h \\to 0}{\\frac{\\sout{a\\log(b)}+b(c+h)^2 \\sout{-a\\log(b)} - bc^2}{h}}$\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{\\cancel{a\\log(b)}+b(c+h)^2 \\cancel{-a\\log(b)} - bc^2}{h}}$\n",
     "\n",
     "$= \\lim\\limits_{h \\to 0}{\\frac{b(c+h)^2 - bc^2}{h}}$\n",
     "\n",
@@ -3459,11 +3459,11 @@
     "\n",
     "$= \\lim\\limits_{h \\to 0}{\\frac{b(c^2 +2ch + h^2 - c^2)}{h}}$\n",
     "\n",
-    "$= \\lim\\limits_{h \\to 0}{\\frac{b(\\sout{c^2} +2ch + h^2 - \\sout{c^2})}{h}}$\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{b(\\cancel{c^2} +2ch + h^2 - \\cancel{c^2})}{h}}$\n",
     "\n",
     "$= \\lim\\limits_{h \\to 0}{\\frac{2bch}{h} \\frac{bh^2}{h}}$\n",
     "\n",
-    "$= \\lim\\limits_{h \\to 0}{\\frac{2bc\\sout{h}}{\\sout{h}} \\frac{\\sout{bh^2}}{\\sout{h}}}$\n",
+    "$= \\lim\\limits_{h \\to 0}{\\frac{2bc\\cancel{h}}{\\cancel{h}} \\frac{\\cancel{bh^2}}{\\cancel{h}}}$\n",
     "\n",
     "$= 2bc$"
    ]
