:wrench: termino la derivada con pytorch

--- a/examen/rivela-examen-ap-coh5.ipynb
+++ b/examen/rivela-examen-ap-coh5.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3471,7 +3471,63 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Derivada utilizando Grafo y Regla de la Cadena"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Derivada utilizando Pytorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "En a = 2 la derivada vale:  tensor(2.3026)\n",
+      "En b = 10 la derivada vale:  tensor(0.4500)\n",
+      "En c = 0.5 la derivada vale:  tensor(10.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.tensor(2., requires_grad=True)\n",
+    "b = torch.tensor(10., requires_grad=True)\n",
+    "c = torch.tensor(0.5, requires_grad=True)\n",
+    "\n",
+    "y = ( a * torch.log(b) ) + ( b * torch.pow(c, 2) )\n",
+    "\n",
+    "y.backward()\n",
+    "\n",
+    "print(\"En a = 2 la derivada vale: \", a.grad)\n",
+    "print(\"En b = 10 la derivada vale: \", b.grad)\n",
+    "print(\"En c = 0.5 la derivada vale: \", c.grad)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para todos los casos se verifica que:\n",
+    "\n",
+    "- En $a=2$ la derivada es $log_{e}(10)$ que equivale a 2.3\n",
+    "- En $b=10$ la derivada es $\\frac{2}{10} * 0.5^2$ que equivale a 0.45\n",
+    "- En $c=0.5$ la derivada es $2 * 10 * 0.5$ que equivale a 10"
+   ]
   }
  ],
  "metadata": {
