:wrench: agrego conclusiones punto 3

--- a/examen/rivela-examen-ap-coh5.ipynb
+++ b/examen/rivela-examen-ap-coh5.ipynb
@@ -1809,7 +1809,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aca vemos que hay 2 columnas con muchos nulls, Product_Category_3 tiene aprox. 70% y Product_Category_2 tiene aprox. 30%. Ambas columnas son candidatas a ser ignoradas para el modelo."
+    "Aca vemos que hay 2 columnas con muchos nulls, Product_Category_3 tiene aprox. 70% y Product_Category_2 tiene aprox. 30%."
    ]
   },
   {
@@ -5245,17 +5245,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Por un lado se implementó una red neuronal fully connected de 7 capas (6 con componente alineal y la última solo con la parte lineal) con cada capa intermedia con 100 neuronas y por otro lado se implementó una red neuronal de igual arquitectura pero agregando 2 embeddings, uno para los usuarios y otro para los productos.\n",
+    "Por un lado se implementó una red neuronal fully connected y por otro lado se implementó una red neuronal agregando 2 embeddings, uno para los usuarios y otro para los productos.\n",
     "\n",
-    "Para la red neuronal que no tiene embeddings lo que se ve es que la red está haciendo underfitting, no llega a reducir el loss en el dataset de training ni en el de validation, por lo que quizás, con una arquitectura un poco más compleja se puedan llegar a obtener mejores resultados.\n",
+    "Para la red neuronal que no tiene embeddings, se vieron distintos comportamientos:\n",
+    "- Para la primera, que tenia 6 capas de 100 neuronas, lo que se ve es que la red está haciendo underfitting, no llega a reducir el loss en el dataset de training ni en el de validation. Sin embargo, el puntaje AUC no es malo.\n",
+    "- Para esta misma red, lo que se probó luego es cambiar el learning rate, por uno mayor y por uno menor. Con un LR mayor, a la red le cuesta mucho aprender y se ve que su gradiente va pegando saltos. Para el LR menor, se ve un aprendizaje un poco más lento pero más continuo.\n",
     "\n",
-    "Para la red neuronal que tiene los 2 embeddings, lo que se ve es un claro overfitting. La red se aprende de memoria el dataset de training pero el error en validation crece a medida que pasan las epochs.\n",
+    "Luego se probó agregando neuronas y agregando capas, y lo que se vio fue:\n",
+    "- Para la red donde se agregaron neuronas (9 capas y 500 neuronas cada una), se ve un claro overfitting. Se reduce el loss en train pero comienza a crecer en validation.\n",
+    "- Para la red donde se agregaron capas (15 capas de 100 neuronas cada una), se ve el mismo comportamiento que para la primer red. Hay underfitting.\n",
     "\n",
+    "Para la red neuronal que tiene los 2 embeddings, lo que se ve es un claro overfitting. La red se aprende de memoria el dataset de training pero el error en validation crece a medida que pasan las epochs. Se probó implementar esta misma red pero con Dropout pero el resultado fue el mismo.\n",
+    "\n",
+    "Después de todos estos intentos, hice un pairplot del dataset para ver un poco como están las distintas features en relación al target. Asumo que el dataset no es muy bueno y es por eso que las redes tuvieron dificultad para lograr apreder.\n",
     "\n",
     "Nota:\n",
-    "Para este ejercicio se intentó trabajar el dataset inicial de distintas maneras, por ejemplo en lugar de remover las filas con null, remover las columnas Product_Category_2 y Product_Category_3 pero los resultados fueron similares o peores.\n",
-    "\n",
-    "Por otro lado también se intentó trabajar con redes más pequeñas (2 o 3 capas) pero los efectos fueron similares."
+    "Para este ejercicio se intentó trabajar el dataset inicial de distintas maneras, por ejemplo en lugar de remover las filas con null, remover las columnas Product_Category_2 y Product_Category_3 pero los resultados fueron similares o peores. Al comienzo, también intenté trabajar con redes más pequeñas (2 o 3 capas) pero los efectos fueron similares (underfitting)."
    ]
   },
   {
